# CS447_Project_2

./: AlphaPlayer.cpp  AlphaPlayer.h  Bet.cpp  Bet.h  BetHistory.cpp  BetHistory.h  BetaPlayer.cpp  BetaPlayer.h  CMakeLists.txt  Card.cpp  Card.h  Game.cpp  Game.h  Hand.cpp  Hand.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  main.cpp  results.txt
